crates/math-core/tests/snapshots/error_test__operatorname_with_end.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname{\\end{matrix}}"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:15 ]
   │
 1 │ \operatorname{\end{matrix}}
   │               ──────┬─────  
   │                     ╰─────── expected an argument here
───╯
